kubernetes/argocd/apps/workloads/disconnect/manifests/deployment-2023.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disconnect-2023
  namespace: disconnect
  labels:
    app: disconnect-2023
spec:
  replicas: 1
  selector:
    matchLabels:
      app: disconnect-2023
  template:
    metadata:
      labels:
        app: disconnect-2023
    spec:
      containers:
        - name: disconnect-2023
          image: ghcr.io/paulkiernan/disconnect-2023:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 3
      imagePullSecrets:
        - name: dockerconfigjson-github-com
