kubernetes/argocd/apps/workloads/disconnect/manifests/service-2023.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: disconnect-2023
  namespace: disconnect
spec:
  selector:
    app: disconnect-2023
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
