kubernetes/argocd/apps/workloads/disconnect/manifests/ingress-2023.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: disconnect-2023
  namespace: disconnect
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "disconnect-2023.paulynomial.com"
      http:
        paths:
          - backend:
              service:
                name: disconnect-2023
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - disconnect-2023.paulynomial.com
      secretName: disconnect-2023-paulynomial-com-tls
